# ResonanceBeacon

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROJECT_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  test-pipeline.json
docs/: agent-guide.md  api.md  architecture.md  configuration.md  deployment.md  design.md  hooks.md
docs/superpowers/plans/: 2026-05-11-hermes-claude-code-cli.md  2026-05-11-hermes-desktop-app.md  2026-05-12-full-optimization-plan.md
docs/superpowers/specs/: 2026-05-11-hermes-desktop-app-design.md
examples/: websocket_client.py
examples/plugins/: market_index.json
examples/plugins/hello_world/: __init__.py  插件配置.json  配置.json
src/hermes/: __init__.py  数据库.py
src/hermes/人工/: __init__.py  服务.py
src/hermes/制品/: __init__.py  存储.py
src/hermes/后台/: __init__.py  并发.py  熔断器.py  管理器.py
src/hermes/命令行/: __init__.py  __main__.py
src/hermes/命令行/命令/: __init__.py  健康.py  智能体.py  流水线.py  配置.py  项目.py
src/hermes/执行层/: __init__.py  任务执行器.py  调度器.py
src/hermes/接口/: __init__.py  websocket.py  存储.py  应用.py  认证依赖.py
src/hermes/接口/路由/: __init__.py  hermes路由.py  websocket路由.py  健康路由.py  制品路由.py  审批路由.py  对话路由.py  插件市场路由.py  智能体路由.py  流水线路由.py  看板路由.py  自主循环路由.py  配置路由.py  项目路由.py
src/hermes/插件/: __init__.py  市场.py  系统.py
src/hermes/方法论/: __init__.py
src/hermes/方法论/oh_my_hermes/: __init__.py  clarify_requirements.py  implement.py  kanban_task.py  product_brief.py  security_review.py
src/hermes/方法论/superpowers/: __init__.py  brainstorming.py  systematic_debug.py  test_driven_dev.py  verification.py  writing_plans.py
src/hermes/智能体/: __init__.py  上下文管理器.py  健康检查.py  基础.py  提示词模板.py  注册表.py  类别.py
src/hermes/模型/: __init__.py  任务.py  决策.py  制品.py  流水线.py  阶段.py  项目.py
src/hermes/模板/: bugfix.yaml  code-review.yaml  deployment.yaml  documentation.yaml  feature.yaml  microservice.yaml  refactoring.yaml  testing.yaml
src/hermes/监控/: __init__.py  指标.py
src/hermes/编排器/: __init__.py  引擎.py  状态机.py  调度器.py
src/hermes/编排层/: __init__.py  工作流.py  看板.py  自主循环.py
src/hermes/认证/: RBAC.py  __init__.py
src/hermes/配置/: __init__.py  合并.py  模式.py  配置加载器.py
src/hermes/钩子/: __init__.py  会话.py  基础.py  组合器.py
src/hermes/队列/: __init__.py  任务队列.py
tests/: conftest.py
tests/integration/: test_hermes_claude_cli.py
tests/mock/: __init__.py  mock智能体.py
tests/unit/: test_claude_code_适配器.py  test_上下文上下文包.py  test_引擎上下文.py  test_接口_存储.py  test_状态机.py  test_配置合并.py  test_钩子.py
tests/性能/: __init__.py  test性能.py
tests/端到端/: test端到端流水线.py
tests/集成/: test集成流水线.py
web/: electron-builder.yml  electron.vite.config.ts  index.html  package.json  tailwind.config.js  tsconfig.electron.json  vite.config.ts
web/electron/: main.ts  preload.ts  python-manager.ts
web/src/: App.tsx  env.d.ts  index.css
web/src/api/: client.ts
web/src/components/: AutonomousLoopStatus.tsx  Card.tsx  ErrorBoundary.tsx  ErrorDisplay.tsx  Layout.tsx  Loading.tsx  StatCard.tsx  StatusBadge.tsx  theme-provider.tsx
web/src/contexts/: AuthContext.tsx
web/src/pages/: Agents.tsx  Approvals.tsx  Config.tsx  Dashboard.tsx  KanbanBoard.tsx  Login.tsx  PipelineDetail.tsx  Pipelines.tsx  ProjectDetail.tsx  Projects.tsx
web/src/types/: index.ts
(+23 files in other folders)
