[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-pipeline"
version = "0.1.0"
description = "起源信标 - 智能流水线开发系统"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "AyaseAlterego", email = "your.email@example.com" }
]
keywords = ["pipeline", "ai", "agents", "orchestration", "development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.23",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Message queue and caching
    "redis>=5.0.0",
    "celery[redis]>=5.3.0",

    # CLI
    "typer[all]>=0.9.0",
    "rich>=13.7.0",

    # Utilities
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "json5>=0.9.14",
    "pyyaml>=6.0.1",

    # AI/Agent integration
    "anthropic>=0.18.0",

    # Monitoring
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

docker = [
    "docker>=7.0.0",
    "docker-compose>=1.29.0",
]

[project.urls]
Homepage = "https://github.com/AyaseAlterego/ResonanceBeacon"
Documentation = "https://github.com/AyaseAlterego/ResonanceBeacon#readme"
Repository = "https://github.com/AyaseAlterego/ResonanceBeacon"
Issues = "https://github.com/AyaseAlterego/ResonanceBeacon/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501"]  # line too long, handled by black

[tool.ruff.isort]
known-first-party = ["hermes"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "--import-mode=importlib",
]

[tool.coverage.run]
source = ["src/hermes"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "except ImportError",
]

[project.scripts]
rb = "hermes.命令行:app"
